      explicitly).  (CNY-1714)
    * Dependency resolution now allows updates to go across branches if the
      branches are on the same label.
    * Dependency resolution now follows the same "never drop an architecture"
      rule as other update code (CNY-1713).
    * Added --show-files parameter to "conary config" to display where
      configuration items came from.

  o Bug Fixes:
    * Fix a bug in commit code that made r.macros.buildlabel unusable because
      you could not commit recipes that used it.  (CNY-1752)
    * An internal class, _AbstractPackageRecipe, has been renamed, to allow
      the inclusion of its methods in the subclasses' documentation pages.
      The old name is still available for compatibility with older modules.
      (CNY-1848)
    * The --replace-files option has been split into
      --replace-managed-files, --replace-unmanaged-files,
      --replace-modified-files, and --replace-config-files. The original
      option is still accepted, and is equivalent to specifying all four
      of the new options simultaneously (CNY-1270)
    * Multiple entitlements can be stored for a single hostname or glob
      (previously only the last hostname for a particular hostname/glob
      would be used). (CNY-1825)
    * Cloning the source component for filesets is now allowed.

  o Build Changes:
    * The cvc update command can now update multiple directories
      simultaneously.
    * Java files are now put in a :java component by default. (CNY-527)
    * Python dependencies now include flags designating the major version
      of python involved, as well as a flag distinguishing the target
      architecture library directory (normally "lib" or "lib64") to
      enhance update reliability.  When building a bootstrap python
      or using a different python executable than Conary is running
      with, Conary will use an external python process to determine
      python dependencies. (CNY-1517)